     evol
   - deraadt@cvs.openbsd.org 2006/03/27 13:03:54
     [dh.c]
     use strtonum() instead of atoi(), limit dhg size to 64k; ok djm
   - djm@cvs.openbsd.org 2006/03/27 23:15:46
     [sftp.c]
     always use a format string for addargs; spotted by mouring@
   - deraadt@cvs.openbsd.org 2006/03/28 00:12:31
     [README.tun ssh.c]
     spacing

20060326
 - OpenBSD CVS Sync
   - jakob@cvs.openbsd.org 2006/03/15 08:46:44
     [ssh-keygen.c]
     if no key file are given when printing the DNS host record, use the
     host key file(s) as default. ok djm@
   - biorn@cvs.openbsd.org 2006/03/16 10:31:45
     [scp.c]
     Try to display errormessage even if remout == -1
     ok djm@, markus@
   - djm@cvs.openbsd.org 2006/03/17 22:31:50
     [authfd.c]
     another unreachable found by lint
   - djm@cvs.openbsd.org 2006/03/17 22:31:11
     [authfd.c]
     unreachanble statement, found by lint
   - djm@cvs.openbsd.org 2006/03/19 02:22:32
     [serverloop.c]
     memory leaks detected by Coverity via elad AT netbsd.org;
     ok deraadt@ dtucker@
   - djm@cvs.openbsd.org 2006/03/19 02:22:56
     [sftp.c]
     more memory leaks detected by Coverity via elad AT netbsd.org;
     deraadt@ ok
   - djm@cvs.openbsd.org 2006/03/19 02:23:26
     [hostfile.c]
     FILE* leak detected by Coverity via elad AT netbsd.org;
     ok deraadt@
   - djm@cvs.openbsd.org 2006/03/19 02:24:05
     [dh.c readconf.c servconf.c]
     potential NULL pointer dereferences detected by Coverity
     via elad AT netbsd.org; ok deraadt@
   - djm@cvs.openbsd.org 2006/03/19 07:41:30
     [sshconnect2.c]
     memory leaks detected by Coverity via elad AT netbsd.org;
     deraadt@ ok
   - dtucker@cvs.openbsd.org 2006/03/19 11:51:52
     [servconf.c]
     Correct strdelim null test; ok djm@
   - deraadt@cvs.openbsd.org 2006/03/19 18:52:11
     [auth1.c authfd.c channels.c]
     spacing
   - deraadt@cvs.openbsd.org 2006/03/19 18:53:12
     [kex.c kex.h monitor.c myproposal.h session.c]
     spacing